<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@+id/ll_paint_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            tools:src="@drawable/image">
        </ImageView>

        <edu.mailman.kidsdrawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_paint_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_gallery"
            android:scaleType="fitXY"
            android:contentDescription="@string/brush_selector" />

        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_brush"
            android:scaleType="fitXY"
            android:contentDescription="@string/brush_selector" />

        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_undo"
            android:scaleType="fitXY"
            android:contentDescription="@string/brush_selector" />

        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_save"
            android:scaleType="fitXY"
            android:contentDescription="@string/save_selector" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:background="@color/skin"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:background="@color/black"
            android:onClick="paintClicked"
            android:contentDescription="@string/black_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:background="@color/red"
            android:onClick="paintClicked"
            android:contentDescription="@string/red_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:background="@color/green"
            android:onClick="paintClicked"
            android:contentDescription="@string/green_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:background="@color/blue"
            android:onClick="paintClicked"
            android:contentDescription="@string/blue_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:background="@color/yellow"
            android:onClick="paintClicked"
            android:contentDescription="@string/yellow_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:background="@color/lollipop"
            android:onClick="paintClicked"
            android:contentDescription="@string/lollipop_button" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:background="@color/random"
            android:onClick="paintClicked"
            android:contentDescription="@string/random_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>